Ajustes para reaproveitamento de documentação dos erros status 403 e exempos de erros internos e gnericos do sistima
